quick first draft of Java 17 support